caproto/v0.8.0/_sources/generated/caproto.server.records.BoFields.rst.txt
caproto.server.records.BoFields
===============================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: BoFields

.. autoclass:: BoFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="bo"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: BoFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - CHAR 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - change_of_state_sevr
           - ``COSV``
           - Change of State Sevr
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - desired_output_loc
           - ``DOL``
           - Desired Output Loc
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - CHAR 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - hardware_mask
           - ``MASK``
           - Hardware Mask
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - invalid_outpt_action
           - ``IVOA``
           - INVALID outpt action
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - invalid_output_value
           - ``IVOV``
           - INVALID output value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - last_value_alarmed
           - ``LALM``
           - Last Value Alarmed
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - last_value_monitored
           - ``MLST``
           - Last Value Monitored
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - one_error_severity
           - ``OSV``
           - One Error Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - one_name
           - ``ONAM``
           - One Name
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.BoFields`
                 **Get**
                 **Put**
           - 
    
        *  - output_mode_select
           - ``OMSL``
           - Output Mode Select
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - output_specification
           - ``OUT``
           - Output Specification
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - prev_raw_value
           - ``ORAW``
           - prev Raw Value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - prev_readback_value
           - ``ORBV``
           - Prev Readback Value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - prev_simulation_mode
           - ``OLDSIMM``
           - Prev. Simulation Mode
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - raw_value
           - ``RVAL``
           - Raw Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
                 **Put**
           - 
    
        *  - readback_value
           - ``RBV``
           - Readback Value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - CHAR 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess 
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - seconds_to_hold_high
           - ``HIGH``
           - Seconds to Hold High
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - sim_mode_async_delay
           - ``SDLY``
           - Sim. Mode Async Delay
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - sim_mode_scan
           - ``SSCN``
           - Sim. Mode Scan
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - simulation_mode
           - ``SIMM``
           - Simulation Mode
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - simulation_mode_link
           - ``SIML``
           - Simulation Mode Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - simulation_mode_severity
           - ``SIMS``
           - Simulation Mode Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - simulation_output_link
           - ``SIOL``
           - Simulation Output Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - zero_error_severity
           - ``ZSV``
           - Zero Error Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.BoFields`
           - 
    
        *  - zero_name
           - ``ZNAM``
           - Zero Name
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.BoFields`
                 **Get**
                 **Put**
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~BoFields.group_read
       ~BoFields.group_write
       ~BoFields.publish
       ~BoFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~BoFields.default_values
       ~BoFields.has_val_field
       ~BoFields.scan_rate_sec
       ~BoFields.type_map
       ~BoFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: one_name.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: zero_name.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68